# epic_food_formulator

./: .coverage  .env.example  .gitignore  ANALISIS_Y_REFACTORIZACION.md  Auditoria codigo.md  Ejemplo tabla nutricional.xlsx  Información Nutricional.docx  PHASE2_COMPLETION.md  README.md  REFACTOR_CHANGELOG.md  UI_INTEGRATION_SUMMARY.md  UI_WIREUP_COMPLETE.md  UI_WIREUP_SUMMARY.md  agua.xlsx  canela.xlsx  egg.xlsx  formulacion.xlsx  last_path.json  main.py  main_window_previus.py  normalization_notes.md  pyproject.toml  requirements-dev.txt  requirements.txt  tmp_candidate.py
application/: use_cases.py
config/: constants.py  container.py
docs/: architecture.md  migration_guide.md  refactor_plan.md
domain/: exceptions.py  models.py
domain/services/: __init__.py  cost_service.py  formulation_service.py  label_generator.py  number_parser.py  nutrient_calculator.py  nutrient_ordering.py  unit_normalizer.py
infrastructure/: __init__.py
infrastructure/api/: __init__.py  cache.py  usda_repository.py
infrastructure/normalizers/: __init__.py
infrastructure/persistence/: __init__.py  excel_exporter.py  formulation_importer.py  json_repository.py
saves/: Con costos.json  Current Formulation.xlsx  DeTo Papi.json  DeTodo.xlsx  DeTodo1.json  DeTodo1.xlsx  DeTodo1kg.xlsx  DeTodo2.json  DeTodo2.xlsx  DeTodo3.xlsx  DeTodoEjemplo.xlsx  DeTodoElVerdadero.xlsx  DeTodoElVerdaderoFull.xlsx  DeTodoElVerdaderoFull2.xlsx  Lentejas Oreos y pringles.xlsx  Lentejas y Oreos y pringles.json  Lentejas y Oreos.json  Lentejas y Oreos.xlsx  Lentejas y cosas demo.json  Lentejas y cosas.json  Lentejas y cosas.xlsx  Lentejas y cosas1.xlsx  Lentejas y cosas2.xlsx  Lentejas y cosas3.xlsx  Lentejas y cosas_full.xlsx  Muestra Costos.json  Muestra Costos.xlsx  column_normalization.md  debug.json  formulacion.json  formulacion.xlsx  oreo.xlsx  test etiqueta.xlsx  wgg.xlsx  wtf.json  wtf.xlsx
services/: nutrient_normalizer.py  usda_api.py
tests/: __init__.py
tests/integration/: test_presenters.py
tests/unit/: test_formulation_service.py  test_label_generator.py  test_models.py  test_nutrient_calculator.py  test_nutrient_normalizer.py
tmp_blobs/: audit_report.md  runtime_trace.json  runtime_trace_merged.json  runtime_trace_run1.json  runtime_trace_run2.json
tools/: DeTodo1.xlsx  TestDebug.json  audit_report.py  last_path.json  run_with_trace.py  runtime_trace.py  usda_raw_food.py
ui/: formatters.py  main_window.py  main_window.py.backup  main_window_slim.py  workers.py
ui/actions/: normalize_mass_action.py
ui/adapters/: formulation_mapper.py
ui/delegates/: __init__.py  label_table_delegate.py  (+1 more)
ui/tabs/: __init__.py  (+5 more)
(+11 files in other folders)
